@@ -19,10 +19,10 @@
     <string id="22006">New</string>
     <string id="22007">Old</string>  
     <string id="22008">FAILED!</string>
-    <string id="22010">FAVORITES</string>  
-    <string id="22011">RED</string>  
-    <string id="22012">YELLOW</string>  
-    <string id="22013">GREEN</string>  
+    <string id="22010">Favorites</string>  
+    <string id="22011">Red</string>  
+    <string id="22012">Yellow</string>  
+    <string id="22013">Green</string>  
     <string id="22014">BLUE</string>  
     <string id="22015">PINK</string>  
     <string id="22016">AQUA</string>  
@@ -30,6 +30,7 @@
     <string id="22018">WHITE</string>
     <string id="23001">RodinaTV Add to Favorites</string>
     <string id="23002">RodinaTV Delete from Favorites</string>
+    <string id="23003">Delete from Favorites ?</string>    
 	<string id="10000">English</string>
 	<string id="11000">General settings</string> 
 	<string id="11001">View settings</string> 
