@@ -19,10 +19,10 @@
     <string id="22006">Новый</string>
     <string id="22007">Старый</string>     
     <string id="22008">ОШИБКА!</string>
-    <string id="22010">ИЗБРАННОЕ</string>  
-    <string id="22011">КРАСНЫЙ</string>  
-    <string id="22012">ЖЕЛТЫЙ</string>  
-    <string id="22013">ЗЕЛЕНЫЙ</string>  
+    <string id="22010">Избранное</string>  
+    <string id="22011">Красный</string>  
+    <string id="22012">Желтый</string>  
+    <string id="22013">Зеленый</string>  
     <string id="22014">СИНИЙ</string>  
     <string id="22015">РОЗОВЫЙ</string>  
     <string id="22016">ГОЛУБОЙ</string>  
@@ -30,6 +30,7 @@
     <string id="22018">БЕЛЫЙ</string>
     <string id="23001">RodinaTV Добавить в Избранное</string>
     <string id="23002">RodinaTV Удалить из Избранного</string>
+    <string id="23003">Удалить из Избранного?</string>
 	<string id="10000">Russian</string>
 	<string id="11000">Общие настройки</string>
 	<string id="11001">Режимы просмотра</string> 
